tests/haste_name_reducers_defaults/haste_name_reducers_defaults.exp
Error --------------------------------------------------------------------------------------------------- Module1.js:5:1

Cannot cast `test` to boolean because `Test` [1] is incompatible with boolean [2]. [incompatible-type]

   Module1.js:5:1
   5| test as boolean;
      ^^^^

References:
   node_modules/test/Module1.js:4:31
   4| module.exports = (new Test(): Test);
                                    ^^^^ [1]
   Module1.js:5:9
   5| test as boolean;
              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- index.js:3:1

Cannot cast `require(...)` to boolean because `Test` [1] is incompatible with boolean [2]. [incompatible-type]

   index.js:3:1
   3| require('Module1') as boolean;
      ^^^^^^^^^^^^^^^^^^

References:
   node_modules/test/Module1.js:4:31
   4| module.exports = (new Test(): Test);
                                    ^^^^ [1]
   index.js:3:23
   3| require('Module1') as boolean;
                            ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- index.js:4:1

Cannot cast `require(...).foo()` to boolean because `Test2` [1] is incompatible with boolean [2]. [incompatible-type]

   index.js:4:1
   4| require('Module2').foo() as boolean;
      ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   foo/Module2.js.flow:2:32
   2| declare export function foo(): Test2;
                                     ^^^^^ [1]
   index.js:4:29
   4| require('Module2').foo() as boolean;
                                  ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- index.js:5:9

Cannot resolve module `Module3`. [cannot-resolve-module]

   5| require('Module3');
              ^^^^^^^^^



Found 4 errors
